--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="conteudo-titulo"
              <img src="unlock (1).svg" alt="cadeado fechado">
              <h2 class="titulo-principal" > Gerador de senhas</h2>    
-             <h3 class="titulo-secundario" > Gere instantaneamente</h3>      
+             <h3 class="titulo-secundario" > Gere instantaneamente uma senha aleatória e segura</h3>      
     </div>
     </section>
 </body>
