--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de senhas</title>
+    <titl>Gerador de senhas</titl>
 </head>
 <body>
-    <section class="conteudo">
-        <div class="conteudo-titulo"
+    <section class="conteudo"></section>
+    <div class="conteudo-titulo">
              <img src="unlock (1).svg" alt="cadeado fechado">
-             <h2 class="titulo-principal" > Gerador de senhas</h2>    
-             <h3 class="titulo-secundario" > Gere instantaneamente uma senha aleatória e segura</h3>      
+             <h2 class="titulo-principal">Gerador de senhas</h2>    
+             <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>      
     </div>
-    </section>
 </body>
 </html>
